templates/grafana-ingress.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: grafana.conrado.dev
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
